feat: user: support new website https://staffeng.com

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-beautifulsoup4==4.9.1
-certifi==2020.6.20
-chardet==3.0.4
-idna==2.10
-requests==2.24.0
-soupsieve==2.0.1
-urllib3==1.25.10
+beautifulsoup4>=4.9
+certifi==2021.5.30
+chardet==4.0.0
+idna==3.2
+requests==2.26.0
+soupsieve==2.2.1
+urllib3>=1.25
 python-dateutil~=2.8.1
-PyYAML~=5.3.1
+PyYAML==5.4.1
+torpy~=1.1.4
+setuptools==57.4.0
