--- a/setup.cfg
+++ b/setup.cfg
@@ -3,10 +3,6 @@ current_version = 0.6.0
 commit = True
 tag = True
 
-[bumpversion:file:setup.py]
-search = version='{current_version}'
-replace = version='{new_version}'
-
-[bumpversion:file:colusa/__init__.py]
+[bumpversion:file:colusa/_version.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
