chore: update setup.cfg for version location

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,6 @@ current_version = 0.8.0
 commit = True
 tag = True
 
-[bumpversion:file:colusa/_version.py]
+[bumpversion:file:src/colusa/_version.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
