chg: update unit test to mock download_content

--- a/tox.ini
+++ b/tox.ini
@@ -9,5 +9,6 @@ deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 usedevelop = True
 commands =
-    # NOTE: you can run any command line tool here - not just tests
     pytest --cov-report term --cov=colusa
+    # NOTE: for debugging purpose, enable following command to disable pytest log capturing
+    # pytest --cov-report term --cov=colusa -s
