--- a/.gitchangelog.rc
+++ b/.gitchangelog.rc
@@ -247,12 +247,14 @@ include_merge = True
 ##        take care of everything and might be more complex. Check the README
 ##        for a complete copy-pastable example.
 ##
-# publish = FileInsertIntoFirstRegexMatch(
-#     "CHANGELOG.rst",
-#     r'/(?P<rev>[0-9]+\.[0-9]+(\.[0-9]+)?)\s+\([0-9]+-[0-9]{2}-[0-9]{2}\)\n--+\n/',
-#     idx=lambda m: m.start(1)
-# )
-#publish = stdout
+OUTPUT_FILE = "CHANGELOG.md"
+INSERT_POINT = r"\n## (?P<rev>v[0-9]+\.[0-9]+(\.[0-9]+)?)\s+\([0-9]+-[0-9]{2}-[0-9]{2}\)\n"
+publish = FileInsertAtFirstRegexMatch(
+     OUTPUT_FILE,
+     INSERT_POINT,
+     idx=lambda m: m.start(0)
+)
+## publish = stdout
 
 
 ## ``revs`` is a list of callable or a list of string
@@ -286,12 +288,12 @@ include_merge = True
 ##
 ## The default is to use all commits to make the changelog.
 #revs = ["^1.0.3", ]
-#revs = [
-#    Caret(
-#        FileFirstRegexMatch(
-#            "CHANGELOG.rst",
-#            r"(?P<rev>[0-9]+\.[0-9]+(\.[0-9]+)?)\s+\([0-9]+-[0-9]{2}-[0-9]{2}\)\n--+\n")),
-#    "HEAD"
-#]
-revs = []
+revs = [
+    Caret(
+        FileFirstRegexMatch(
+            OUTPUT_FILE,
+            INSERT_POINT)),
+    "HEAD"
+]
+#revs = []
 
