--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,6 +1,6 @@
 bump2version==1.0.1
 gitchangelog==3.0.4
-pystache==0.5.4
+pystache @ git+https://github.com/sarnold/pystache@0.6.0
 readme-renderer==30.0
 twine==3.4.2
 wheel
