--- a/.gitchangelog.rc
+++ b/.gitchangelog.rc
@@ -65,6 +65,7 @@ ignore_regexps = [
     r'^([cC]hg|[fF]ix|[nN]ew)\s*:\s*[p|P]kg:',
     r'^([cC]hg|[fF]ix|[nN]ew)\s*:\s*[d|D]ev:',
     r'^(.{3,3}\s*:)?\s*[fF]irst commit.?\s*$',
+    r'^Bump version:',
     r'^$',  ## ignore commits with empty messages
 ]
 
