--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 beautifulsoup4>=4.9
-certifi==2025.8.3
-chardet==5.2.0
+certifi>=2025.8.3
+chardet>=5.2.0
 idna==3.10
-requests==2.32.4
-soupsieve==2.7
-urllib3==2.5.0
+requests>=2.32.4
+soupsieve>=2.7
+urllib3>=2.5.0
 python-dateutil~=2.9.0
-PyYAML==6.0.1
+PyYAML>=6.0.1
 torpy~=1.1.6
-setuptools==80.3.1
+setuptools>=80.3.1
